--- a/Frontend/style/signup.css
+++ b/Frontend/style/signup.css
@@ -282,6 +282,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     width: 100%;
     max-width: 400px; /* Adjust max width as needed */
+    /* height: 400px; */
 }
 
 .form-container {
